Fix: single post image alignment, post card, remove comment

--- a/src/styles/components/_post.scss
+++ b/src/styles/components/_post.scss
@@ -34,8 +34,7 @@
     font-weight: normal;
     font-size: 15px;
     line-height: 24px;
-    /* or 162% */
-
+    min-height: 72px;
     color: var(--article-secondary-color);
     margin: 12px 0 24px;
   }
